--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <a href="https://openweathermap.org/" target="_blank">
-      <img src="./media/logo.png" alt="logo" class="logo">
+      <img src="./assets/logo.png" alt="logo" class="logo">
     </a>
   </header>
   <main class="--center --flex__columns">
@@ -60,6 +60,6 @@
       <!-- ------------- -->
     </div>
   </main>
-  <script src="./assets/index.js"></script>
+  <script src="./Js/index.js"></script>
 </body>
 </html
